--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DB_NAME=gitpro_db
 DB_PASSWORD=password
 DB_USER=root
-JAWSBD_URL=mysql://rwu4049pkgsscl4u:ssk6lxujy3gwh5ny@n4m3x5ti89xl6czh.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/bkjy5ewqg409o4mx
+JAWSBD_URL=mysql://rb19ipydnheaaf2b:pjfjnyecloksxckv@ebh2y8tqym512wqs.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/xgpw8vfctou4277u
