--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DB_NAME=gitpro_db
 DB_PASSWORD=password
 DB_USER=root
+JAWSDB_URL=mysql://mh2wkeaxwintm2rd:qjq3oe60em5gc00m@ebh2y8tqym512wqs.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/io5xjhl2vic64e6a
